# Jarvis-Claude

./: .env.example  .eslintrc.json  .gitignore  DEPLOYMENT_CHECKLIST.md  PROJECT_SETUP.md  README.md  jarvis-changes.bundle  middleware.ts  next-env.d.ts  next.config.js  package.json  tailwind.config.ts  tsconfig.json  vercel.json
app/: globals.css  layout.tsx  page.tsx
bot/: .env.example  README.md  config.yaml  pyproject.toml  requirements.txt  run_backtest.py  run_paper.py
bot/bot/: config.py  logging_setup.py
bot/bot/backtest/: engine.py  metrics.py  report.py
bot/bot/data/: base.py  cache.py  crypto_ccxt.py  polymarket.py
bot/bot/execution/: broker.py  crypto_live.py  order.py  paper.py  polymarket_live.py
bot/bot/features/: indicators.py  pipeline.py  regime.py  structure.py
bot/bot/live/: runner.py  scheduler.py  worker.py
bot/bot/probability/: calibration.py  edge.py  p_market.py  p_model.py
bot/bot/risk/: guards.py  portfolio.py  sizer.py  stops.py
bot/bot/storage/: db.py  models.py  repositories.py
bot/bot/strategy/: base.py  breakout.py  mean_reversion.py  momentum.py  router.py
bot/docs/: MC_FINDINGS_AND_PLAN.md
bot/tests/integration/: test_backtest_smoke.py
bot/tests/unit/: test_edge.py  test_expectancy.py  test_guards.py  test_indicators.py  test_paper_broker.py  test_regime.py  test_sizing.py  test_stops.py
bot/tools/: gen_synth_history.py  mc_backtest.py
components/: AccountManager.tsx  BriefingHistory.tsx  BriefingPlayer.tsx  CalendarView.tsx  Dashboard.tsx  EmailCompose.tsx  EmailList.tsx  FinancialSnapshot.tsx  Sidebar.tsx  (+7 more)
(+45 files in other folders)
